# TEA-FCC

./: .gitignore  CALLSIGN_LOOKUP_README.md  CLEANUP_CANDIDATES.md  CLEANUP_SUMMARY.md  DARK_THEME_SUMMARY.md  DATABASE_SCHEMA.md  EMPTY_CALLSIGN_FIX.md  ENHANCED_LOOKUP_GUIDE.md  FILE_OVERVIEW.md  FINAL_CLEANUP_SUMMARY.md  FLASK_SCHEMA_FIXES.md  FLASK_WEB_APP_SUMMARY.md  FREQUENCY_DUPLICATE_FIX.md  FTS_REMOVAL_SUMMARY.md  INSTALL.md  LICENSEE_DUPLICATE_FIX.md  PROJECT_FINAL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SEARCH_NAVIGATION_FIX.md  STATE_FILTERING_SUMMARY.md  TECHNICAL_TABLES_SUMMARY.md  TERMINOLOGY_CLARIFICATION.md  add_cleanup.py  com.local.fcc-uls-downloader.plist  config.py  create_indexes.py  create_indexes.sql  enhanced_lookup.py  fcc-uls-downloader.service  fix_file_path_error.py  main.py  manual_download_helper.py  pyproject.toml  query_examples.py  remove_fts.py  run_webapp.sh  setup_fts.py
docs/: CURL_SUCCESS.md  DARK_THEME_IMPLEMENTATION.md  DATABASE_INDEXES.md  DISK_SPACE_MANAGEMENT.md  DOWNLOAD_IMPLEMENTATION.md  ENHANCED_FEATURES_SUMMARY.md  INDEX_IMPLEMENTATION_SUMMARY.md  LICENSE_STATUS_FIX.md  add_cleanup.py  fix_file_path_error.py
scripts/: callsign_lookup.py  check_fcc_status.py  cleanup_downloads.py  com.local.fcc-uls-downloader.plist  create_indexes.py  fcc-uls-downloader.service  fcc-uls-downloader.timer  fcc-uls-webapp.service  run_download.sh  run_webapp_production.sh
sql/: schema.sql
webapp/: README.md  app.py  gunicorn.conf.py  requirements.txt
webapp/templates/: base.html  callsign_detail.html  error.html  (+1 more)
